--- a/checkout.html
+++ b/checkout.html
@@ -15,6 +15,13 @@
         </div>
     </nav>
   </div>
+  <section class="max-w-4xl mx-auto mt-10 p-4 bg-white shadow rounded">
+    <h2 class="text-2xl font-bold mb-4 text-primary">Order Summary</h2>
+    <div id="checkout-summary" class="space-y-4"></div>
+      <div class="text-right mt-6">
+        <p class="text-xl font-semibold">Total: ₹<span id="checkout-total">0</span></p>
+      </div>
+  </section>
 
 
   <main class="max-w-4xl mx-auto p-6 bg-white mt-8 rounded-lg shadow">
