--- a/checkout.html
+++ b/checkout.html
@@ -59,6 +59,7 @@
   </main>
 
   <script src="js/main.js"></script>
+  <script src="js/checkout.js"></script>
   <script>
     document.getElementById('checkout-form').addEventListener('submit', function(e) {
       e.preventDefault();
