--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
   <!-- Desktop -->
   <nav class="bg-primary text-white shadow p-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold">REVEUR</h1>
+     <button id="menu-toggle" class="md:hidden text-2xl focus:outline-none">
+      ☰
+      </button>
     <ul class="flex gap-6 font-medium">
       <li><a href="index.html" class="hover:underline">Home</a></li>
       <li><a href="products.html" class="hover:underline">Products</a></li>
