--- a/cart.html
+++ b/cart.html
@@ -17,13 +17,29 @@
       }
     };
   </script>
+  <style>
+  @keyframes dropdown {
+    0% {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .animate-dropdown {
+    animation: dropdown 0.3s ease-out;
+  }
+</style>
 </head>
 <body class="bg-white text-dark">
 
   <!-- NAVBAR -->
   <nav class="bg-primary text-white p-4 flex justify-between items-center shadow">
     <h1 class="text-2xl font-bold">REVEUR</h1>
-    <ul class="flex gap-6">
+    <ul class="flex gap-6 hidden md:flex">
       <li><a href="index.html" class="hover:underline">Home</a></li>
       <li><a href="products.html" class="hover:underline">Products</a></li>
       <li class="relative">
@@ -34,6 +50,19 @@
       </li>
       <li><a href="account.html" class="hover:underline">Account 👤</a></li>
     </ul>
+    <!-- mobile -->
+    <div class="relative md:hidden">
+      <button id="menu-toggle" class="md:hidden text-2xl focus:outline-none">
+      ☰
+      </button>
+      <!-- Dropdown menu -->
+      <ul id="mobile-menu" class="absolute right-0 top-full hidden flex flex-col gap-2 w-48 bg-white text-primary rounded shadow-lg mt-2 z-50 animate-dropdown">
+        <li><a href="index.html" class="block px-4 py-2 hover:bg-orange-100">Home</a></li>
+        <li><a href="products.html" class="block px-4 py-2 hover:bg-orange-100">Products</a></li>
+        <li><a href="cart.html" class="block px-4 py-2 hover:bg-orange-100">Cart 🛒</a></li>
+        <li><a href="account.html" class="block px-4 py-2 hover:bg-orange-100">Account 👤</a></li>
+      </ul>
+    </div>
   </nav>
 
   <!-- MAIN CART CONTENT -->
@@ -48,6 +77,7 @@
       <button id="checkout-btn" class="bg-primary text-white px-6 py-2 rounded hover:bg-orange-600">Proceed to Checkout</button>
     </div>
   </main>
+  <script src="js/main.js"></script>
   <script src="js/cart-utils.js" defer></script>
   <script src="js/cart.js"></script>
 </body>
