--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
   <!-- NAVBAR -->
   <nav class="bg-primary text-white shadow p-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold">REVEUR</h1>
-    <ul class="flex gap-6 font-medium">
+    <ul class="flex gap-6 font-medium hidden md:flex">
       <li><a href="index.html" class="hover:underline">Home</a></li>
       <li><a href="products.html" class="hover:underline">Products</a></li>
       <li class="relative">
@@ -34,6 +34,35 @@
       </li>
       <li><a href="account.html" class="hover:underline">Account 👤</a></li>
     </ul>
+    <!-- mobile -->
+    <div class="relative md:hidden">
+      <button id="menu-toggle" class="md:hidden text-2xl focus:outline-none">
+      ☰
+      </button>
+      <!-- Dropdown menu -->
+      <ul id="mobile-menu" class="absolute right-0 top-full hidden flex flex-col gap-2 w-48 bg-white text-primary rounded shadow-lg mt-2 z-50 animate-dropdown">
+        <li><a href="index.html" class="block px-4 py-2 hover:bg-orange-100">Home</a></li>
+        <li><a href="products.html" class="block px-4 py-2 hover:bg-orange-100">Products</a></li>
+        <li><a href="cart.html" class="block px-4 py-2 hover:bg-orange-100">Cart 🛒</a></li>
+        <li><a href="account.html" class="block px-4 py-2 hover:bg-orange-100">Account 👤</a></li>
+      </ul>
+    </div>
+    <style>
+  @keyframes dropdown {
+    0% {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .animate-dropdown {
+    animation: dropdown 0.3s ease-out;
+  }
+</style>
   </nav>
 
   <!-- PRODUCT DETAILS -->
@@ -42,7 +71,7 @@
       <!-- JS will inject content here -->
     </div>
   </main>
-
+  <script src="js/main.js"></script>
   <script src="js/product.js"></script>
   <script src="js/cart-utils.js" defer></script>
 </body>
