--- a/account.html
+++ b/account.html
@@ -73,7 +73,7 @@
       Logout
     </button>
   </main>
-
+  <script src="js/cart-utils.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
